--- a/src/main/resources/templates/success.html
+++ b/src/main/resources/templates/success.html
@@ -28,6 +28,15 @@
             </div>
         </div>
     </div>
+    <div class="ui padded vertical segment m-padded-tb-large" >
+        <!--mobile reversed反序-->
+        <div class="ui middle aligned grid mobile reversed stackable" >
+            <form method="POST" action="/upload" enctype="multipart/form-data">
+                <input type="file" name="file" value="请选择文件" />
+                <button type="submit" >提交</button>
+            </form>
+        </div>
+    </div>
 </div>
 </body>
 </html>
