--- a/src/main/resources/templates/success.html
+++ b/src/main/resources/templates/success.html
@@ -4,41 +4,76 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/semantic-ui/2.2.4/semantic.min.css">
+    <!--引入jQuery-->
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.2/dist/jquery.min.js"></script>
+    <!--引入semantic-ui的 JS-->
+    <script src="https://cdn.jsdelivr.net/semantic-ui/2.2.4/semantic.min.js"></script>
+
 </head>
 <body>
+<nav class="ui inverted attached segment segment  m-shadow-small">
+    <h3 class="header">主界面</h3>
+    <div class="ui right labeled icon button" th:if="${stack.size()}!=1">
+        <i class="left arrow icon"></i>
+        <a class="item" href="/lastPath" >
+           返回上一级
 
-<h3>主界面</h3>
-<div><a href="/lastPath" th:if="${stack.size()}!=1">返回上一级</a></div>
-<div class="" th:each="path,iterStat: ${stack}">/<a a href="/#" th:href="@{/last/{num}(num=${iterStat.index})}" th:text="${path.name}">a</a></div>
+        </a>
+    </div>
+</nav>
 
+<table class="ui celled striped table ">
+    <thead>
+    <tr><th colspan="3">
+        <div class="ui" th:each="path,iterStat: ${stack}">
+            /
+            <a a href="/#" th:href="@{/last/{num}(num=${iterStat.index})}" th:text="${path.name}">a</a>
+
+        </div>
+    </th>
+    </tr></thead><tbody>
+    <tr th:each="directory : ${directorys}">
+        <td class="">
+            <i class="folder icon"></i><a class="item" href="#" th:href="@{/index/childDir/{name}(name=${directory.name})}"   th:text="${directory.name}">庐山旅行记录-江西</a>
+        </td>
+        <td>Initial commit</td>
+        <td class="right aligned collapsing">10 hours ago</td>
+    </tr>
+    <tr th:each="file : ${files}">
+        <td>
+            <i class="file outline  icon"></i><a href="#" th:href="@{/download/{name}(name=${file.name})}" target="_blank" class="m-black" th:text="${file.getName()}">庐山旅行记录-江西</a>
+        </td>
+        <td>Initial commit</td>
+        <td class="right aligned">10 hours ago</td>
+    </tr>
+</tbody>
+</table>
 <div class="ui attached segment">
-    <p>目录</p>
-    <div class="ui padded vertical segment m-padded-tb-large" th:each="directory : ${directorys}">
-        <div class="ui middle aligned grid mobile reversed stackable" >
-            <div class="eleven wide column">
 
-                <h3><a href="#" th:href="@{/index/childDir/{name}(name=${directory.name})}"  class="m-black" th:text="${directory.name}">庐山旅行记录-江西</a></h3>
-            </div>
-        </div>
-    </div>
-    <p>文件</p>
-    <div class="ui padded vertical segment m-padded-tb-large" th:each="file : ${files}">
-        <div class="ui middle aligned grid mobile reversed stackable" >
-            <div class="eleven wide column">
-
-                <h3><a href="#" th:href="@{/download/{name}(name=${file.name})}" target="_blank" class="m-black" th:text="${file.getName()}">庐山旅行记录-江西</a></h3>
-            </div>
-        </div>
-    </div>
     <div class="ui padded vertical segment m-padded-tb-large" >
         <!--mobile reversed反序-->
         <div class="ui middle aligned grid mobile reversed stackable" >
-            <form method="POST" action="/upload" enctype="multipart/form-data">
-                <input class="ui" type="file" name="file" value="请选择文件" />
-                <button class="ui button" type="submit" >提交</button>
-            </form>
+            <div class="ui center aligned compact segment">
+                <form method="POST" action="/upload" enctype="multipart/form-data">
+                    <div class="ui inverted black button"><input class="ui file" type="file" name="file" value="请选择文件" /></div>
+
+
+                    <button class="ui button" type="submit" >提交</button>
+                </form>
+                <div class="ui horizontal divider"></div>
+
+                <form method="POST" action="/create">
+                    <div class="ui left icon action input">
+                        <i class="add icon"></i>
+                        <input type="text" name="dir" placeholder="dir">
+                        <button class="ui blue submit button" type="submit">创建新目录</button>
+                    </div>
+                </form>
+            </div>
         </div>
     </div>
 </div>
+
+
 </body>
 </html>
