--- a/src/main/resources/templates/ImageUpload.html
+++ b/src/main/resources/templates/ImageUpload.html
@@ -1,181 +1,240 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <title>ImageUpload</title>
-    <script src="../static/js/jquery-2.1.4.min.js"></script>
-    <script src ="../static/js/webuploader.nolog.min.js"></script>
+    <meta charset="utf-8">
+    <title>分片上传</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/semantic-ui/2.2.4/semantic.min.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <script type="text/javascript">
+    <!--引入jQuery-->
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.2/dist/jquery.min.js"></script>
+    <!--引入semantic-ui的 JS-->
+    <script src="https://cdn.jsdelivr.net/semantic-ui/2.2.4/semantic.min.js"></script>
+    <!--引入CSS-->
+    <link rel="stylesheet" type="text/css" href="../static/webuploader-0.1.5/webuploader.css">
+    <!--引入JS-->
+    <script type="text/javascript" src="../static/webuploader-0.1.5/webuploader.js"></script>
 
-        $(function () {
-            $list = $('#fileList');
-            var thumbnailHeight = 150;
-            var thumbnailWidth = 150;
-            //WebUploader实例
-            var uploader = WebUploader.create({
+    <link rel="stylesheet" type="text/css" href="../static/css/bootstrap.min.css">
+    <script type="text/javascript" src="../static/js/bootstrap.min.js"></script>
 
-
-                //设置选完文件后是否自动上传
-                auto: false,
-
-
-                //swf文件路径
-                //swf: BASE_URL + '~/FileUpload/Uploader.swf',
-                swf: '../FileUpload/Uploader.swf',
-
-                // 文件接收服务端。
-                server: '/ImageUpload/ImageUp',
-
-                // 选择文件的按钮。可选。
-                // 内部根据当前运行是创建，可能是input元素，也可能是flash.
-                pick: '#picker',
-
-
-                // 不压缩image, 默认如果是jpeg，文件上传前会压缩一把再上传！
-                //resize: false
-
-                //选择图片文件
-                accept: {
-                    title: 'Images',
-                    extensions: 'gif,jpg,jpeg,bmp,png',
-                    mimeTypes: 'image/*'
-                }
-            });
-
-            // 当有文件被添加进队列的时候
-            uploader.on('fileQueued', function (file) {
-                //$list.append('<div id="' + file.id + '" class="item">' +
-                //    '<h4 class="info">' + file.name + '<button type="button" fileId="' + file.id + '" class="btn btn-danger btn-delete"><span class="glyphicon glyphicon-trash"></span></button></h4>' +
-                //    '<p class="state">等待上传...</p>' +
-                //    '</div>');
-                var $li = $('<div id="' + file.id + '" class="item">' +
-                    '<h4 class="info">' + file.name + '<button type="button" fileId="' + file.id + '" class="btn btn-danger btn-delete"><span class="glyphicon glyphicon-trash"></span></button></h4>' +
-                    '<p class="state">等待上传...</p>' +
-                    '<img>' + '</div>'),
-                    $img = $li.find('img');
-                // $list为容器jQuery实例
-                $list.append($li);
-                //创建缩略图
-                uploader.makeThumb(file, function (error, src) {
-                    if (error) {
-                        $img.replaceWith('<span>不能预览</span>');
-                        return;
-                    }
-
-                    $img.attr('src', src);
-                }, thumbnailWidth, thumbnailHeight);
-                //删除要上传的文件
-                //每次添加文件都给btn-delete绑定删除方法
-                $(".btn-delete").click(function () {
-                    //console.log($(this).attr("fileId"));//拿到文件id
-                    uploader.removeFile(uploader.getFile($(this).attr("fileId"), true));
-                    $(this).parent().parent().fadeOut();//视觉上消失了
-                    $(this).parent().parent().remove();//DOM上删除了
-                });
-            });
-
-
-            // 文件上传过程中创建进度条实时显示。
-            uploader.on('uploadProgress', function (file, percentage) {
-                var $li = $('#' + file.id),
-                    $percent = $li.find('.progress .progress-bar');
-
-                // 避免重复创建
-                if (!$percent.length) {
-                    $percent = $('<div class="progress progress-striped active">' +
-                        '<div class="progress-bar" role="progressbar" style="width: 0%">' +
-                        '</div>' +
-                        '</div>').appendTo($li).find('.progress-bar');
-                }
-
-                $li.find('p.state').text('上传中');
-
-                $percent.css('width', percentage * 100 + '%');
-            });
-
-
-            uploader.on('uploadSuccess', function (file) {
-                $('#' + file.id).find('p.state').text('已上传');
-                $('#' + file.id).find(".progress").find(".progress-bar").attr("class", "progress-bar progress-bar-success");
-                $('#' + file.id).find(".info").find('.btn').fadeOut('slow');//上传完后删除"删除"按钮
-            });
-
-            uploader.on('uploadError', function (file) {
-                $('#' + file.id).find('p.state').text('上传出错');
-                //上传出错后进度条爆红
-                $('#' + file.id).find(".progress").find(".progress-bar").attr("class", "progress-bar progress-bar-danger");
-                //添加重试按钮
-                //为了防止重复添加重试按钮，做一个判断
-                //var retrybutton = $('#' + file.id).find(".btn-retry");
-                //$('#' + file.id)
-                if ($('#' + file.id).find(".btn-retry").length < 1) {
-                    var btn = $('<button type="button" fileid="' + file.id + '" class="btn btn-success btn-retry"><span class="glyphicon glyphicon-refresh"></span></button>');
-                    $('#' + file.id).find(".info").append(btn);//.find(".btn-danger")
-                }
-
-
-                $(".btn-retry").click(function () {
-                    //console.log($(this).attr("fileId"));//拿到文件id
-                    uploader.retry(uploader.getFile($(this).attr("fileId")));
-
-                });
-
-            });
-
-            uploader.on('uploadComplete', function (file) {//上传完成后回调
-                //$('#' + file.id).find('.progress').fadeOut();//上传完删除进度条
-                //$('#' + file.id + 'btn').fadeOut('slow')//上传完后删除"删除"按钮
-            });
-
-            uploader.on('uploadFinished', function () {
-                //上传完后的回调方法
-                //alert("所有文件上传完毕");
-                //提交表单
-            });
-
-            $("#UploadBtn").click(function () {
-                uploader.upload();//上传
-            });
-
-            uploader.on('uploadAccept', function (file, response) {
-                //if (uploader.errorCode) {
-                //    // 通过return false来告诉组件，此文件上传有错。
-                //    return false;
-                //}
-                if (response._raw == '{"error":true}') {
-                    return false;
-                }
-            });
-            //重传指定文件
-            //function retry(file) {
-            //    uploader.retry(file);
-            //}
-
-
-        });
-
-
-    </script>
 </head>
 <body>
-    <div class="container" style="margin-top: 50px">
-        <div id="uploader" class="container">
-            <div class="container col-lg-2 " >
-                <div id="fileList" class="uploader-list"></div> <!--存放文件的容器-->
-            </div>
-            <div class="btns container">
-                <div id="picker" class="webuploader-container" style="float: left; margin-right: 10px">
-                    <div>
-                        选择图片
-                        <input type="file" name="file" class="webuploader-element-invisible" multiple="multiple">
-                    </div>
+<div class="container">
+    <div class="row">
+        <div class="col-md-4">
+            <div class="panel panel-default">
+                <div class="panel-heading">上传文件</div>
+                <div class="panel-body">
+                    <div id="picker">选择文件</div>
+                    <div id="filelist"></div>
                 </div>
 
-                <button id="UploadBtn" class="webuploader-pick" style="float: left">开始上传</button>
+            </div>
+        </div>
+        <div class="col-md-4">
+            <div class="panel panel-default">
+                <div class="panel-heading">上传进度及日志</div>
+                <div class="panel-body">
+                    <div>
+                        <div class="progress">
+                            <div class="progress-bar progress-bar-warning progress-bar-striped" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 0%" id="percentage_a">
+                                <span id="percentage">0%</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div id="log" style="max-height: 600px;overflow: auto;">
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-3">
+            <div class="panel panel-default">
+                <div class="panel-heading">上传控制</div>
+                <div class="panel-body">
+                    <div id="ctlBtn" class="btn-group">
+                        <input class="btn btn-primary" type="button" value="开始上传">
+                    </div>
+                    <div class="btn-group">
+                        <input class="btn btn-danger" type="button" value="暂停" id="stop">
+                    </div>
+                    <div class="btn-group">
+                        <input class="btn btn-success" type="button" value="继续" id="start">
+                    </div>
+                </div>
             </div>
         </div>
     </div>
+</div>
+
+<script type="text/javascript">
+    var file_md5   = null;   // 用于MD5校验文件
+    var chunk_md5 = null;
+    var secSend = false;
+    var uploader;
+    var file_chunks;
+    WebUploader.Uploader.register({
+        //文件发送之前执行
+        "before-send-file":"beforeSendFile",
+        //在文件分片（如果没有启用分片，整个文件被当成一个分片）后，上传之前执行
+        "before-send":"beforeSend",
+        //在文件所有分片都上传完后，且服务端没有错误返回后执行
+        "after-send-file":"afterSendFile"
+    },{
+        beforeSendFile:function(file){
+            var me = this,
+                owner = this.owner,
+                deferred = WebUploader.Deferred();
+            log("正在计算MD5值...");
+            log("<div id='md5"+file.id+"'></div>");
+            uploader.md5File(file,0,2*1024*1024)
+            //新版本jquery不会调用
+                .progress(function(percentage) {
+                    $('#md5'+file.id).html((percentage*100).toFixed()+'%');
+                })
+                .then(function (fileMd5) {
+                    file_md5 = fileMd5;
+                    log("MD5计算完成。");
+                    console.log("file_md5:"+file_md5);
+                    // 检查是否有已经上传成功的分片文件
+                    $.post('/check', {fileMD5: file_md5}, function (response) {
+
+                        console.log(response);
+                        log(response.msg);
+                        // data = JSON.parse(data);
+                        // 如果有对应的分片，推入数组
+                        if (response.exist) {
+                            uploader.skipFile(file);
+                            secSend = true;
+                            // deferred.reject();
+                        }
+                        deferred.resolve();
+                    })
+                });
+            return deferred.promise();
+        },
+        beforeSend:function (block) {
+            console.log(block);
+            var me = this,
+                owner = this.owner,
+                blob = block.blob,
+                deferred = WebUploader.Deferred();
+            file_chunks = block.chunks;
+            if(block.chunks>1){
+                uploader.md5File(block.blob).then(function (value) {
+
+                    chunk_md5 = value;
+                    $.post('/checkPiece', {fileMD5: chunk_md5}, function (response) {
+
+                        console.log(response);
+                        log(response.msg);
+                        // data = JSON.parse(data);
+                        // 如果有对应的分片，推入数组
+                        if (response.exist) {
+                            uploader.skipFile(file);
+                            secSend = true;
+                            // deferred.reject();
+                        }
+                        deferred.resolve();
+                    })
+                })
+            }else {
+                deferred.resolve();
+            }
+            return deferred.promise();
+        },
+        afterSendFile:function (file) {
+            var deferred = WebUploader.Deferred();
+            console.log(file_chunks>1 && !secSend);
+            //判断是否要分片
+            if(file_chunks>1 && !secSend){
+                $.post('/merge', { fileMD5: file_md5, fileName: file.name }, function (data) {
+                    // var object = JSON.parse(data);
+
+                    log(data.msg);
+
+                    deferred.resolve();
+                });
+            }else {
+                deferred.resolve();
+            }
+            return deferred.promise();
+        }
+    })
+    // 创建上传
+    uploader = WebUploader.create({
+        swf: '../static/webuploader-0.1.5/Uploader.swf',
+        server: '/upload',          // 服务端地址
+        pick: '#picker',              // 指定选择文件的按钮容器
+        resize: false,
+        chunked: true,                //开启分片上传
+        chunkSize: 1024 * 1024 * 1,   //每一片的大小
+        chunkRetry: 3,              // 如果遇到网络错误,重新上传次数
+        threads: 3,                   // [默认值：3] 上传并发数。允许同时最大上传进程数。
+        // fileNumLimit:1,
+        // fileSizeLimit:1024*1024*1024*1.5,
+    });
+
+    // 上传提交
+    $("#ctlBtn").click(function () {
+        log('准备上传...');
+        uploader.upload();
+    });
+
+    // 当有文件被添加进队列的时候-md5序列化
+    uploader.on('fileQueued', function (file) {
+
+        $("#filelist").append( '<div id="' + file.id + '" class="item">' +
+            '<h4 class="info">' + file.name + '</h4>' +
+            '<p class="state">等待上传...</p>' +
+            '</div>' );
+
+    });
+
+    // 发送前在body中添加一些信息，如分块数目chunks
+    uploader.on('uploadBeforeSend', function( block, data ) {
+        //事件里不支持这种用法
+        // var deferred = WebUploader.Deferred();
+        data.chunks = block.chunks;
+        data.chunk = block.chunk;
+        data.chunkMD5 = chunk_md5;
+        data.fileMD5 = file_md5;
+    });
+
+    // 上传完成后触发
+    uploader.on('uploadSuccess', function (file,response) {
+        if(secSend){
+            $("#percentage_a").css("width","100%");
+            $("#percentage").html("100%");
+        }
+        log("上传完成");
+    });
+
+    // 文件上传过程中创建进度条实时显示。
+    uploader.on('uploadProgress', function (file, percentage) {
+        $("#percentage_a").css("width",parseInt(percentage * 100)+"%");
+        $("#percentage").html(parseInt(percentage * 100) +"%");
+    });
+
+    // 上传出错处理
+    uploader.on('uploadError', function (file) {
+        uploader.retry();
+    });
+
+    // 暂停处理
+    $("#stop").click(function(e){
+        log("暂停上传...");
+        uploader.stop(true);
+    })
+
+    // 从暂停文件继续
+    $("#start").click(function(e){
+        log("恢复上传...");
+        uploader.upload();
+    })
+
+    function log(html) {
+        $("#log").append("<div>"+html+"</div>");
+    }
+
+</script>
 </body>
 </html>
